# doc-extraction

./: .gitignore  404.html  Advent_Gospel_Reflections.json  Advent_Gospel_Reflections_metadata.json  CLOUD_STORAGE_GUIDE.md  DEPRECATION_NOTICE.py  Dark_Night_of.json  Dark_Night_of_hierarchy_report.txt  Dark_Night_of_metadata.json  Into the Deep.json  Into the Deep_hierarchy_report.txt  Into the Deep_metadata.json  MIGRATION_GUIDE.md  PHASE_5_SUMMARY.md  PHASE_6_PLAN.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  The_Interior_Castle.json  The_Interior_Castle_hierarchy_report.txt  The_Interior_Castle_metadata.json  USER_GUIDE.md  VATICAN_EXTRACTION.md  bible_html_parser.py  bible_structure_tree copy.txt  bible_summary_report copy.txt  book_parser.py  book_parser_key.md  book_parser_no_footnotes.py  book_parser_refactored.py  coverage.json  debug_chunks.py  debug_specific_chunk.py  epub_pdf_catholic_parser.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_epub_compatibility.py  (+2 more)
.github/: README.md  dependabot.yml
catholic_sources/: 100_Great_Catholic_Poems.epub  After_Stoicism_Thomas.epub  An_Introduction_to.epub  An_Introduction_to_Prayer.epub  Catholicism_in_the.epub  Come,_Lord_Jesus.epub  Come_Lord_Jesus.epub  Confessions_1.epub  Dark_Night_of.epub  Divine_Mercy_in_My_Soul.epub  Ethics_for_Beginners.epub  Exploring_Catholic_Theology.epub  Fire_Within.epub  Food_for_the.azw  Food_for_the.epub  Food_for_the_1.epub  Food_for_the_Soul.epub  Food_for_the_Soul_Cycle_B.epub  Food_for_the_Soul_Reflections_on_the_Mass_Readings_Cycle_A.epub  (+57 more)
(+259 files in other folders)
